--- a/Shopping.Client/Views/Home/Index.cshtml
+++ b/Shopping.Client/Views/Home/Index.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>Products - Updated V3 from AKS Deployment - last run</h1>
+@* <h1>Products - Updated V3 from AKS Deployment - last run</h1> *@
+<h1>Products - single container</h1>
 <table class="table">
     <thead>
         <tr>
