--- a/Shopping/Shopping.Client/Views/Home/Index.cshtml
+++ b/Shopping/Shopping.Client/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 @* <h1>Products - Updated V3 from AKS Deployment - last run</h1> *@
-<h1>Products - single container</h1>
+<h1>Products - V2 AKS</h1>
 <table class="table">
     <thead>
         <tr>
